2005-05-16  Tor Lillqvist  <tml@novell.com>

	* libgnomeui/gnome-ui-init.c (libgnomeui_module_info_get): As we
	do include gnome-client also on Win32 now (see below), do include
	its module info.

2005-05-13  Tor Lillqvist  <tml@novell.com>

	* libgnomeui/Makefile.am: Do include gnome-client.c also on
	Win32. Presumably doesn't do anything awfully useful without any
	Win32-specific code, but having it in libgnomeui means that apps
	that call its functions don't need to ifdefify those calls.

	* libgnomeui/gnome-client.c: Remove unnecessary includes.

2005-05-11  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnomeui/ChangeLog-19990928: Typos
	* libgnomeui/gnome-app-helper.c: Same

2005-03-23  Dennis Cranston <dennis_cranston@yahoo.com>

	* libgnomeui/gnome-app-helper.c:
	HIG Fix: use header capitalization for game menu items.
	Closes bug #171435.

2005-05-11  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in:
	* libgnomeui/gnome-multiscreen.c: Fix build on Apple Darwin.
	Patch from Hans Petter Jansson <hpj at novell com>. Closes
	bug #166087.

2005-05-11  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnomeui/gnome-file-entry.c: Fix gcc warnings.
	(gnome_file_entry_drag_data_received): Same
	* libgnomeui/gnome-href.c: (drag_data_get): Same
	* libgnomeui/gnome-icon-entry.c: (drag_data_received),
	(drag_data_get): Same
	* libgnomeui/gnome-pixmap-entry.c: (drag_data_get): Same
	* libgnomeui/gnome-thumbnail.c: (thumb_md5): Same
	* libgnomeui/gnome-vfs-util.c: (gnome_gdk_pixbuf_new_from_uri):
	Same and remove a now unused var.

2005-05-11  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnomeui/gnome-client.c: Fix typos
	* libgnomeui/gnome-client.h: Same
	* libgnomeui/gnome-href.c: (gnome_href_clicked): Same
	* libgnomeui/gnome-theme-parser.c: Make an array static const
	* libgnomeui/gnome-thumbnail.c: (thumb_digest_to_ascii),
	(read_md5_dir): Fix GCC4 warnings.
	* libgnomeui/gnome-vfs-util.c: (gnome_gdk_pixbuf_new_from_uri):