@@ -1,3 +1,8 @@
+2005-06-21  Matthias Clasen  <mclasen@redhat.com>
+
+	* file-chooser/gtkfilesystemgnomevfs.c: Implement bookmark 
+	renaming.  (#171264)
+
 2005-05-16  Tor Lillqvist  <tml@novell.com>
 
 	* libgnomeui/gnome-ui-init.c (libgnomeui_module_info_get): As we
